Changes from jTDS 1.2.2
=======================

08/03/2009 - Holger Rehn
 o Corrected bug [1802986], incorrect charset mapping between 'MAC'
   and 'ISO-8859-1'.
 o Resolved problem [1957748], Java VM is leaking memory in
   File.deleteOnExit().
   See http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6664633.

07/31/2009 - Holger Rehn
 o Corrected bug [2508201], date field is changed by 3 milliseconds.

07/30/2009 - Holger Rehn
 o Corrected bug [2796385], running out of UDP sockets.

07/27/2009 - Holger Rehn
 o Corrected bug [1869156] memory leak of WeakReferences.
 o Corrected data truncation problem described in bug [2021839].
 o Corrected bug [1811383] ArrayIndexOutOfBounds on executeBatch.

07/26/2009 - Holger Rehn
 o Corrected bug [2021839] savepoint starts 2 transactions if it's the first
   operation.

07/25/2009 - Holger Rehn
 o Corrected bug [1843801] infinite loop if DB connection dies during a batch.
 o Applied patch [1844846] jTDS cannot connect IBM/Netcool Omnibus.
 o Added JDBC 4 method stubs, feature request [2021848].

07/24/2009 - Holger Rehn
 o Corrected bug [2818256] a savepoint is invalid after rollback.

07/23/2009 - Holger Rehn
 o Corrected bug [1883905] unintentional infinite wait.
 o Applied patch [1714497] to avoid using Sun's SSL implementation.

===============================================================================
08/22/2007 - jTDS 1.2.2 released
===============================================================================

Changes from jTDS 1.2.1
=======================

08/18/2007 - Brian Heineman
 o Applied Mike Hutchinson's fix for bug
   [1774322] Sybase nulled text fields return not null
 
08/05/2007 - Brian Heineman
 o Applied patch [1592113] NTLMv2 properties on datasource.
 o Applied patch [1236417] 64-bit support for Single Sign On (SSO)
 o Applied patch [1504761] Itanium and AMD64/EM64T 64 bit support for SSO
 o Implemented feature [1491811] sqlState code for snapshot conflict.