@@ -1,8 +1,21 @@
-/*
- * CSUnitTest.java
- *
- * Created on 8. September 2001, 07:54
- */
+// jTDS JDBC Driver for Microsoft SQL Server and Sybase
+// Copyright (C) 2004 The jTDS Project
+//
+// This library is free software; you can redistribute it and/or
+// modify it under the terms of the GNU Lesser General Public
+// License as published by the Free Software Foundation; either
+// version 2.1 of the License, or (at your option) any later version.
+//
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// Lesser General Public License for more details.
+//
+// You should have received a copy of the GNU Lesser General Public
+// License along with this library; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+//
+
 package net.sourceforge.jtds.test;
 
 import java.sql.*;
@@ -14,8 +27,8 @@ import net.sourceforge.jtds.util.Logger;
 
 /**
  *
- * @author  builder
- * @version 1.0
+ * @author Alin Sinpalean
+ * @version $Id: CSUnitTest.java,v 1.12.6.1 2009-08-04 10:33:54 ickzon Exp $
  */
 public class CSUnitTest extends DatabaseTestCase {
     public CSUnitTest(String name) {
