@@ -1,3 +1,21 @@
+// jTDS JDBC Driver for Microsoft SQL Server and Sybase
+// Copyright (C) 2004 The jTDS Project
+//
+// This library is free software; you can redistribute it and/or
+// modify it under the terms of the GNU Lesser General Public
+// License as published by the Free Software Foundation; either
+// version 2.1 of the License, or (at your option) any later version.
+//
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// Lesser General Public License for more details.
+//
+// You should have received a copy of the GNU Lesser General Public
+// License along with this library; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+//
+
 package net.sourceforge.jtds.test;
 
 import java.sql.*;
@@ -5,8 +23,9 @@ import java.sql.*;
 /**
  * Some simple tests just to make sure everything is working properly.
  *
- * @created    9 August 2001
- * @version    1.0
+ * @author Alin Sinpalean
+ * @version $Id: SanityTest.java,v 1.8.2.1 2009-08-04 10:33:54 ickzon Exp $
+ * @created 9 August 2001
  */
 
 public class SanityTest extends TestBase {
