@@ -1,9 +1,23 @@
-/*
- * TestBase.java
- *
- * Created on 8. September 2001, 13:34
- */
+// jTDS JDBC Driver for Microsoft SQL Server and Sybase
+// Copyright (C) 2004 The jTDS Project
+//
+// This library is free software; you can redistribute it and/or
+// modify it under the terms of the GNU Lesser General Public
+// License as published by the Free Software Foundation; either
+// version 2.1 of the License, or (at your option) any later version.
+//
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+// Lesser General Public License for more details.
+//
+// You should have received a copy of the GNU Lesser General Public
+// License along with this library; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+//
+
 package net.sourceforge.jtds.test;
+
 import java.io.*;
 import java.sql.*;
 
@@ -12,7 +26,7 @@ import junit.framework.TestCase;
 
 /**
  * @author  builder
- * @version $Id: TestBase.java,v 1.21 2005-07-27 11:02:57 alin_sinpalean Exp $
+ * @version $Id: TestBase.java,v 1.21.2.1 2009-08-04 10:33:54 ickzon Exp $
  */
 public abstract class TestBase extends TestCase {
 
